feat: add  getPrizeBracket logic 03
