# backend/src/presentation/controllers/interfaces/IPrizeBracketResponse.ts
@@ -1,0 +1,11 @@
+interface IMoviePrizeBracketItemResponse {
+    producer: string;
+    interval: number;
+    previousWin: number;
+    followingWin: number;
+}
+
+export interface IMoviePrizeBracketResponse {
+    min: IMoviePrizeBracketItemResponse[];
+    max: IMoviePrizeBracketItemResponse[];
+}
